--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "svgr": "npx @svgr/cli -d src/assets/icons --ignore-existing --no-dimensions public/svgs"
+    "svgr": "npx @svgr/cli -d src/assets/icons --ignore-existing --no-dimensions --ext jsx public/svgs"
   },
   "eslintConfig": {
     "extends": [
