--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^5.69.0",
     "axios": "^1.8.2",
     "cra-template": "1.2.0",
     "js-cookie": "^3.0.5",
