feat: 축준위 부스리스트 완료

--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,5 @@ REACT_APP_KAKAO_CLIENT_ID = 1dc38fe0cde2d724b548bdc5d0e51a9a
 REACT_APP_KAKAO_REDIRECT_URI = http://localhost:3000/oauth/callback/kakao
 
 REACT_APP_KAKAO_ENDPOINT = /accounts/kakao/dev
+
+REACT_APP_COMMITTEE_URL = https://ewha-committee.com
