--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.8.2",
     "cra-template": "1.2.0",
     "js-cookie": "^3.0.5",
+    "lottie-react": "^2.4.1",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
