--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_BASE_URL = http://ec2-3-34-198-157.ap-northeast-2.compute.amazonaws.com
+REACT_APP_BASE_URL = https://api.ewhafesta.co.kr
 
 REACT_APP_KAKAO_CLIENT_ID = 1dc38fe0cde2d724b548bdc5d0e51a9a
 
