--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.15.0",
     "prettier": "^3.5.1",
     "react-app-rewired": "^2.2.1"
